--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,11 +5,26 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title> {% block title %} Welcome! {% endblock %} </title>        
     	<link href="{{ asset('css/style.css') }}" rel="stylesheet" type="text/css" />
+		<link href="{{ asset('css/jquery.weekcalendar.css') }}" rel="stylesheet" type="text/css" />
+			<link href="{{ asset('css/reset.css') }}" rel="stylesheet" type="text/css" />
+		<link rel='stylesheet' type='text/css' href='http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/start/jquery-ui.css' />
 		{% block stylesheets %} {% endblock %}
-        <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />
+        <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />		
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js"></script>
 		<script src="{{ asset('js/jquery-1.7.2.min.js') }}" type="text/javascript" ></script>
+		<script src="{{ asset('js/jquery.weekcalendar.js') }}" type="text/javascript" ></script>
 		<script src="{{ asset('js/jquery.dataTables.min.js') }}" type="text/javascript" ></script>
-		{% block javascripts_head %} {% endblock %}
+		{% block javascripts_head %}<script>
+		jQuery(document).ready(function() {
+		jQuery('#accordion h3').click(function() {
+		if(jQuery(this).hasClass('open')) {
+			jQuery(this).removeClass('open');
+			jQuery(this).next().slideUp('fast');
+		} else {
+			jQuery(this).addClass('open');
+			jQuery(this).next().slideDown('fast');
+		} return false;
+	}); });</script>{% endblock %}
     </head>
     <body>
 	<div id="header">
@@ -35,7 +50,24 @@
 	</div><!-- header -->
 	
 	<div id="sidebar">
-		{% block sidebar %} {% endblock %}      
+		<div id="accordion">
+		{% block sidebar %}
+		<h3 class="open">Użytkownicy</h3>
+        <div class="content" style="display: block;">
+        	<ul class="leftmenu">
+            	<li class="current"><a href="dashboard.html" class="home">Utwórz nowego</a></li>
+                <li><a href="forms.html" class="form">Pokaż wszystkich</a></li>                           
+            </ul>
+        </div> 
+		<h3 class="open">Produkty</h3>
+        <div class="content" style="display: block;">
+        	<ul class="leftmenu">
+            	<li><a href="dashboard.html" class="home">Utwórz nowy</a></li>
+                <li><a href="forms.html" class="form">Pokaż wszystkie</a></li>                           
+            </ul>
+        </div>
+		{% endblock %}
+		</div><!--accordion-->
 	</div><!-- sidebar -->
 
 	<div id="content">
