--- a/src/Mcms/UserBundle/Resources/views/list.html.twig
+++ b/src/Mcms/UserBundle/Resources/views/list.html.twig
@@ -2,11 +2,7 @@
 {% extends '::dashboard.html.twig' %}
 
 {% block javascripts_head %}
-	<script type="text/javascript">
-		$(document).ready(function() {
-    		$('.example').dataTable();
-		} );
-	</script>
+	
 {% endblock %}
 
 {% block title %} Lista użytkowników {% endblock %}
@@ -16,30 +12,33 @@
 {% block content %}
  	<h1 class="pageTitle">Lista użytkowników</h1>
 	<div class="tableOpt"></div><!--end table Options-->	
-		<table cellpadding="0" cellspacing="0" class="tableHead" width="100%" class="example">
+		<table cellpadding="0" cellspacing="0" class="tableHead" width="100%" >
 				<colgroup>
-					<col class="head1" width="20%" />
-					<col class="head0" width="20%" />
-					<col class="head1" width="20%" />
-					<col class="head0" width="20%" />
-					<col class="head1" width="20%" />					
+					<col class="head1" width="15%" />
+					<col class="head0" width="17%" />
+					<col class="head1" width="17%" />
+					<col class="head0" width="17%" />
+					<col class="head1" width="17%" />
+					<col class="head0" width="17%" />						
 				</colgroup>
 				<tr>
 					<td>Id</td>
 					<td>Login</td>
 					<td>Imię</td>
 					<td>Nazwisko</td>
-					<td>Aktywność</td> 					
+					<td>Aktywność</td> 	
+					<td>Akcja</td>					
 				</tr>
 		</table>
 	<div class="tableWrapper">
-        <table cellpadding="0" cellspacing="0" class="table" class="example" width="100%">
+        <table id="example" cellpadding="0" cellspacing="0" class="dyntable" id="table"  width="100%">
                 <colgroup>
-                    <col class="con1" width="20%" />
-                    <col class="con0" width="20%" />
-                    <col class="con1" width="20%" />
-                    <col class="con0" width="20%" />
-					<col class="con1" width="20%" /> 					
+                    <col class="con1" width="15%" />
+                    <col class="con0" width="17%" />
+                    <col class="con1" width="17%" />
+                    <col class="con0" width="17%" />
+					<col class="con1" width="17%" />
+					<col class="con0" width="17%" />  					
                 </colgroup>
 
 		
@@ -56,6 +55,7 @@
                             FALSE
                         {% endif %}
 					</td>
+					<td><a href="{{ path('user_show', { 'id': user.id }) }}">Przejdź do profilu</a></td>
 				</tr>
 			{% endfor %}
 		</table>		
