--- a/src/Mcms/UserBundle/Resources/views/show.html.twig
+++ b/src/Mcms/UserBundle/Resources/views/show.html.twig
@@ -1,13 +1,7 @@
 {# src/Mcms/UserBundle/Resources/views/show.html.twig #}
 {% extends '::dashboard.html.twig' %}
 
-{% block javascripts_head %}
-	<script type="text/javascript">
-		$(document).ready(function() {
-    		$('.example').dataTable();
-		} );
-	</script>
-{% endblock %}
+{% block javascripts_head %}{% endblock %}
 
 {% block title %} Szczegóły użytkownika {% endblock %}
 
@@ -15,65 +9,38 @@
 
 {% block content %}	
 	<h1 class="pageTitle">Szczegóły użytkownika</h1>
-		<div class="tableOpt">
-			<h4>{{ user.firstname }} {{ user.lastname }} <a href="{{ path('users_list') }}">
+		
+	<div class="window1">
+			<h3><span style="height:20px;">
+				<a href="{{ path('users_list') }}">
 				<button style="float:right" type="submit">&laquo Wróć do listy użytkowników</button>
 				</a>
-				<form action="{{ path('user_password_reset', { 'id': user.id } )}}" method="post">
-					{{ form_widget(password_reset_form) }}
-					<button style="float:right; margin:-26px 5px 0 0;" type="submit" onClick="return confirm('Na pewno chcesz zresetować hasło?')">Resetuj hasło</button>
-				</form>
-			</h4>	            
-        </div><!--end table Options-->
-			<table cellpadding="0" cellspacing="0" class="tableHead" width="100%" class="example">
-				<colgroup>
-					<col class="head1" width="15%" />
-					<col class="head0" width="17%" />
-					<col class="head1" width="17%" />
-					<col class="head0" width="17%" /> 
-					<col class="head1" width="17%" />
-					<col class="head0" width="17%" /> 					
-				</colgroup>
-				<tr>
-					<td>Id</td>
-					<td>Login</td>
-					<td>Imię</td>
-					<td>Nazwisko</td>
-					<td>Rola</td>
-					<td>Aktywność</td> 					
-				</tr>
-			</table>
-		<div class="tableWrapper">
-            <table cellpadding="0" cellspacing="0" class="table" width="100%">
-                <colgroup>
-                    <col class="con1" width="15%" />
-                    <col class="con0" width="17%" />
-                    <col class="con1" width="17%" />
-                    <col class="con0" width="17%" />
-					<col class="con1" width="17%" />
-                    <col class="con0" width="17%" /> 					
-                </colgroup>		
-			<tr>
-				<td>{{ user.id }}</td>
-				<td>{{ user.username }}</td>
-				<td>{{ user.firstname}}</td>
-				<td>{{ user.lastname}}</td>
-				<td>
-                        {% for role in user.userRoles %}
-                            <p>{{role.name }}</p>
-                        {% endfor %}
-                </td>
-                <td>
-                        {% if user.isactive %}
+			</span></h3>
+		<div class="inside">
+			<div class="one_third"><p><b>Id użytkownika:</b></p>
+				<p><b>Imię:</b></p>
+				<p><b>Nazwisko:</b></p>
+				<p><b>Rola:</b></p>
+				<p><b>Aktywność:</b></p>
+			</div>
+            <div class="one_third">
+				<p>{{ user.id }}</p>
+				<p>{{ user.firstname }}</p>
+				<p>{{ user.lastname }}</p>
+				{% for role in user.userRoles %}<p>{{ role.name }}</p>{% endfor %}
+				<p> {% if user.isactive %}
                             TRUE
                         {% else %}
                             FALSE
-                        {% endif %}
-                </td>
-			</tr>		
-			</table>
+                        {% endif %}</p>
+			</div>
+			<div class="one_third last">
+					<form action="{{ path('user_password_reset', { 'id': user.id } )}}" method="post">
+					{{ form_widget(password_reset_form) }}
+					<a href="" class="resetlink"  onClick="return confirm('Na pewno chcesz zresetować hasło?')" title="Resetuj hasło">Resetuj hasło</a>
+				</form>
+			</div>     
 		</div>
-	
-
+	</div>
 		
 {% endblock %}
