New concept - base

--- a/app/Resources/views/dashboard.html.twig
+++ b/app/Resources/views/dashboard.html.twig
@@ -10,7 +10,7 @@
 {% block tabmenu %}
 	<ul>
 		{{ helpers.tab('users_list', 'Lista użytkowników') }}
-		{{ helpers.tab('products', 'Lista produktów') }}
+		{{ helpers.tab('admin.productList', 'Lista produktów') }}
 	</ul>
 {% endblock %}
 
