--- a/src/Mcms/ProductBundle/Resources/views/Admin/list.html.twig
+++ b/src/Mcms/ProductBundle/Resources/views/Admin/list.html.twig
@@ -11,8 +11,8 @@ $(document).ready(function() {
 <h3 class="open">Produkty</h3>
         <div class="content" style="display: block;">
         	<ul class="leftmenu">
-            	<li><a href="{{ path('product_new') }}" class="home">Utwórz produkt</a></li>
-                <li><a href="{{ path('products') }}" class="form">Lista produktów</a></li>
+            	<li><a href="{{ path('admin.productNew') }}" class="home">Utwórz produkt</a></li>
+                <li><a href="{{ path('admin.productList') }}" class="form">Lista produktów</a></li>
                 
             </ul>
         </div>
@@ -21,7 +21,7 @@ $(document).ready(function() {
 <h1 class="pageTitle">Lista produktów</h1>
 	<div class="tableOpt">
 		<h4>Lista produktów
-<a href="{{ path('product_new') }}"><button type="submit" style="float:right">Utwórz produkt</button></a></h4>	
+<a href="{{ path('admin.productNew') }}"><button type="submit" style="float:right">Utwórz produkt</button></a></h4>	
     </div><!--end table Options-->	
 		<table cellpadding="0" cellspacing="0" class="tableHead" width="100%" id="example">
 				<colgroup>
@@ -49,10 +49,10 @@ $(document).ready(function() {
 		
 			{% for product in products %}
 				<tr>
-					<td><a href="{{ path('product_show', { 'id': product.id }) }}">{{ product.id }}</a></td>
+					<td><a href="{{ path('admin.productShow', { 'id': product.id }) }}">{{ product.id }}</a></td>
 					<td>{{ product.name }}</td>
 					<td>{{ product.price }}</td>
-					<td><a class="editlink" href="{{ path('product_edit', { 'id': product.id }) }}">Edytuj</a></td>
+					<td><a class="editlink" href="{{ path('admin.productEdit', { 'id': product.id }) }}">Edytuj</a></td>
 				</tr>
 			{% endfor %}
 		</table>		
