--- a/src/Mcms/UserBundle/Resources/views/Admin/changePassword.html.twig
+++ b/src/Mcms/UserBundle/Resources/views/Admin/changePassword.html.twig
@@ -4,9 +4,15 @@
 {% block title %}{{ app.user }} - Change Password{% endblock %}
 
 {% block content %}
-    <form action="{{ path('admin.updatePassword')}}" method="post" {{ form_enctype(form) }}>
+<h1 class="pageTitle">Zmiana hasła</h1>
+<div class="window1">
+	<h3><span></span></h3>
+	<div class="inside">
+    <form class="form_default" action="{{ path('admin.updatePassword')}}" method="post" {{ form_enctype(form) }}>
         {{form_errors(form)}}
         {{ form_widget(form) }}
         <input type="submit" />
     </form>
+</div>
+</div>
 {% endblock %}
