--- a/src/Mcms/UserBundle/Resources/views/changePassword.html.twig
+++ b/src/Mcms/UserBundle/Resources/views/changePassword.html.twig
@@ -6,9 +6,15 @@
 {% block sidebar %} {% include 'McmsUserBundle::sidebar.html.twig' %} {% endblock %}
 
 {% block content %}
-	<form action="{{ path('changePasswordProcess')}}" method="post" {{ form_enctype(form) }}>
+<h1 class="pageTitle">Zmiana hasła</h1>
+<div class="window1">
+	<h3><span></span></h3>
+	<div class="inside">
+	<form class="form_default" action="{{ path('changePasswordProcess')}}" method="post" {{ form_enctype(form) }}>
 		{{form_errors(form)}}
     	{{ form_widget(form) }}
     	<input type="submit" />
 	</form>
+</div>
+</div>
 {% endblock %}
