--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,6 +8,7 @@
 		{% block stylesheets %} {% endblock %}
         <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />
 		<script src="{{ asset('js/jquery-1.7.2.min.js') }}" type="text/javascript" ></script>
+		<script src="{{ asset('js/main_scripts.js') }}" type="text/javascript" ></script>
 		<script src="{{ asset('js/jquery.dataTables.min.js') }}" type="text/javascript" ></script>
 		{% block javascripts_head %} {% endblock %}
     </head>
@@ -39,7 +40,9 @@
 	</div><!-- sidebar -->
 
 	<div id="content">
-		{% block content %} {% endblock %}
+		{% block content %}
+			{%block dashboard %} {%endblock%}
+		{% endblock %}
 	</div><!-- content -->
 
 	<div id="footer">
