--- a/src/Mcms/ProductBundle/Resources/views/Admin/list.html.twig
+++ b/src/Mcms/ProductBundle/Resources/views/Admin/list.html.twig
@@ -7,22 +7,16 @@ $(document).ready(function() {
 } );
 </script>
 {% endblock %}
-{%block sidebar%}
-<h3 class="open">Produkty</h3>
-        <div class="content" style="display: block;">
-        	<ul class="leftmenu">
-            	<li><a href="{{ path('admin.productNew') }}" class="home">Utwórz produkt</a></li>
-                <li><a href="{{ path('admin.productList') }}" class="form">Lista produktów</a></li>
-                
-            </ul>
-        </div>
-{% endblock %}
+
+{%block sidebar%}{% endblock %}
+
 {% block content %}
 {{ products.setUsedRoute('admin.productList') }}
+{{products.setTemplate('::pagination.html.twig')}}
 <h1 class="pageTitle">Lista produktów</h1>
 	<div class="tableOpt">
-		<h4>Lista produktów
-<a href="{{ path('admin.productNew') }}"><button type="submit" style="float:right">Utwórz produkt</button></a></h4>	
+		<h4>Tutaj może kiedys bedzie jakis opis
+<a href="{{ path('admin.productNew') }}"><button class="button_blue" type="submit" style="float:right; margin:-7px 0 0 0;">Utwórz produkt</button></a></h4>	
     </div><!--end table Options-->	
 		<table cellpadding="0" cellspacing="0" class="tableHead" width="100%" id="example">
 				<colgroup>
@@ -53,7 +47,9 @@ $(document).ready(function() {
 					<td><a href="{{ path('admin.productShow', { 'id': product.id }) }}">{{ product.id }}</a></td>
 					<td>{{ product.name }}</td>
 					<td>{{ product.price }}</td>
-					<td><a class="editlink" href="{{ path('admin.productEdit', { 'id': product.id }) }}">Edytuj</a></td>
+					<td><a class="editlink" href="{{ path('admin.productEdit', { 'id': product.id }) }}" title="Edytuj produkt">Edytuj</a>
+					<a class="profilelink" href="{{ path('admin.productShow', { 'id': product.id }) }}" title="Zobacz szczegoly produktu">{{ product.id }}</a>
+					</td>
 				</tr>
 			{% endfor %}
 		</table>		
