--- a/src/Mcms/UserBundle/Resources/views/list.html.twig
+++ b/src/Mcms/UserBundle/Resources/views/list.html.twig
@@ -11,35 +11,41 @@
 
 {% block title %} Lista użytkowników {% endblock %}
 
-{% block sidebar %} {% include 'McmsUserBundle::sidebar.html.twig' %} {% endblock %}
+{% block sidebar %}
+<!-- {% include 'McmsUserBundle::sidebar.html.twig' %} -->
+{% endblock %}
 
 {% block content %}
+
  	<h1 class="pageTitle">Lista użytkowników</h1>
 	<div class="tableOpt"></div><!--end table Options-->	
 		<table cellpadding="0" cellspacing="0" class="tableHead" width="100%" class="example">
 				<colgroup>
-					<col class="head1" width="20%" />
-					<col class="head0" width="20%" />
-					<col class="head1" width="20%" />
-					<col class="head0" width="20%" />
-					<col class="head1" width="20%" />					
+					<col class="head1" width="5%" />
+					<col class="head0" width="19%" />
+					<col class="head1" width="19%" />
+					<col class="head0" width="19%" />
+					<col class="head1" width="19%" />
+					<col class="head0" width="19%" />					
 				</colgroup>
 				<tr>
 					<td>Id</td>
 					<td>Login</td>
 					<td>Imię</td>
 					<td>Nazwisko</td>
-					<td>Aktywność</td> 					
+					<td>Aktywność</td>
+					<td>Akcja</td>  					
 				</tr>
 		</table>
 	<div class="tableWrapper">
         <table cellpadding="0" cellspacing="0" class="table" class="example" width="100%">
                 <colgroup>
-                    <col class="con1" width="20%" />
-                    <col class="con0" width="20%" />
-                    <col class="con1" width="20%" />
-                    <col class="con0" width="20%" />
-					<col class="con1" width="20%" /> 					
+                    <col class="con1" width="5%" />
+                    <col class="con0" width="19%" />
+                    <col class="con1" width="19%" />
+                    <col class="con0" width="19%" />
+					<col class="con1" width="19%" />
+					<col class="con0" width="19%" /> 					
                 </colgroup>
 
 		
@@ -56,8 +62,10 @@
                             FALSE
                         {% endif %}
 					</td>
+					<td><a class="profilelink" href="{{ path('user_show', { 'id': user.id }) }}" title="Zobacz szczegoly uzytkownika"></a></td>
 				</tr>
 			{% endfor %}
+
 		</table>		
 	</div>	
 {% endblock %}
