--- a/src/Mcms/UserBundle/Resources/views/Admin/profile.html.twig
+++ b/src/Mcms/UserBundle/Resources/views/Admin/profile.html.twig
@@ -2,7 +2,15 @@
 {% extends '::dashboard.html.twig' %}
 
 {% block title %}{{app.user}} - Profile{% endblock %}
+{% block stylesheets %} 
+<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/themes/start/jquery-ui.css" rel="stylesheet" type="text/css"  />
+<link href="{{ asset('css/jquery.weekcalendar.css') }}" rel="stylesheet" type="text/css" />
+<link href="{{ asset('css/demo.css') }}" rel="stylesheet" type="text/css" />
 
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js" type="text/javascript" ></script>
+<script src="{{ asset('js/demo.js') }}" type="text/javascript" ></script>
+<script src="{{ asset('js/jquery.weekcalendar.js') }}" type="text/javascript" ></script>
+{% endblock %}
 {% block content %}
     <h1 class="pageTitle">{{app.user}} Profile</h1>
 	<div class="window1">
@@ -16,5 +24,29 @@
 		</ul>
 		</div>
 	</div>
+	
+	<div id='calendar'></div>
+	<div id="event_edit_container">
+		<form>
+			<input type="hidden" />
+			<ul>
+				<li>
+					<span>Date: </span><span class="date_holder"></span> 
+				</li>
+				<li>
+					<label for="start">Start Time: </label><select name="start"><option value="">Select Start Time</option></select>
+				</li>
+				<li>
+					<label for="end">End Time: </label><select name="end"><option value="">Select End Time</option></select>
+				</li>
+				<li>
+					<label for="title">Title: </label><input type="text" name="title" />
+				</li>
+				<li>
+					<label for="body">Body: </label><textarea name="body"></textarea>
+				</li>
+			</ul>
+		</form>
+	</div>	
 	
 {% endblock %}
