--- a/app/Resources/views/helpers.html.twig
+++ b/app/Resources/views/helpers.html.twig
@@ -5,5 +5,5 @@
 {% endmacro %}
 
 {% macro menu(route, caption) %}
-	<li><a href=""{{ path(route) }}>{{ caption }}</a></li>
+	<li><a href="{{ path(route) }}">{{ caption }}</a></li>
 {% endmacro %}
