--- a/src/Mcms/ProductBundle/Resources/views/Admin/list.html.twig
+++ b/src/Mcms/ProductBundle/Resources/views/Admin/list.html.twig
@@ -1,22 +1,18 @@
-{% extends '::base.html.twig' %}
-{% block stylesheets %}
-<script src="{{ asset('js/jquery.dataTables.min.js') }}" type="text/javascript" ></script>
-<script type="text/javascript">
-$(document).ready(function() {
-    $('#example').dataTable();
-} );
-</script>
+{# src/Mcms/ProductBundle/Resources/views/Admin/list.html.twig #}
+{% extends '::dashboard.html.twig' %}
+
+{% block javascripts_head %}
+	<script type="text/javascript">
+		$(document).ready(function() {
+    		$('.example').dataTable();
+		} );
+	</script>
 {% endblock %}
-{%block sidebar%}
-<h3 class="open">Produkty</h3>
-        <div class="content" style="display: block;">
-        	<ul class="leftmenu">
-            	<li><a href="{{ path('admin.productNew') }}" class="home">Utwórz produkt</a></li>
-                <li><a href="{{ path('admin.productList') }}" class="form">Lista produktów</a></li>
-                
-            </ul>
-        </div>
-{% endblock %}
+
+{% block title %} Lista produktów {% endblock %}
+
+{% block sidebar %} {% include 'McmsProductBundle:Admin:sidebar.html.twig' %} {% endblock %}
+
 {% block content %}
 {{ products.setUsedRoute('admin.productList') }}
 <h1 class="pageTitle">Lista produktów</h1>
@@ -59,5 +55,5 @@ $(document).ready(function() {
 		</table>		
 	</div>
     	
-	{{ products.render()|raw }}
+	{{ products.render()|raw }}	
 {% endblock %}
