--- a/src/Mcms/ProductBundle/Resources/views/Admin/new.html.twig
+++ b/src/Mcms/ProductBundle/Resources/views/Admin/new.html.twig
@@ -1,5 +1,9 @@
-{% extends '::base.html.twig' %}
+{% extends '::dashboard.html.twig' %}
 {% form_theme form '::formErrors.html.twig' %}
+
+{% block title %} Utwórz nowy produkt {% endblock %}
+
+{% block sidebar %} {% include 'McmsProductBundle:Admin:sidebar.html.twig' %} {% endblock %}
 
 {% block content %}
 	{{ form_errors(form.price) }}
